# cv-web

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
.junie/: guidelines.md
.streamlit/: config.prod.toml  config.toml
content/: education.md  experiences.md  intro.md  publications.yaml  skill_categories.yaml  skills.csv  skills.md
content/articles/: article-1.md
content/education/: msi.md  prepa.md  stl.md
content/experiences/: cdiscount-chatbot.md  cdiscount-ptl.md  cdiscount-python.md  indep-ynov.md  peaksys-ptl.md  sii-ionic.md  xperis-webdev.md
content/projects/: genkit-mistral.md  mistral-client.md  mlflow.md  project-alpha.md  project-beta.md  s3-box.md
content/side-projects/: genkit-mistral.md  mistral-client.md  s3-box.md
libs/cms/: __init__.py  experience.py  md.py  navigation.py  page.py  skill.py
libs/cms/common/: __init__.py  files.py  nav.py  page.py  skill.py  time.py
libs/cms/data/datasource/: __init__.py  yaml_file.py
libs/cms/data/layouts/: __init__.py  cards.py
libs/cms/documents/: __init__.py
libs/cms/documents/datasource/: __init__.py  markdown_file.py
libs/cms/documents/layouts/: __init__.py  _load.py  cards_and_dialogs.py  tabs.py
libs/cms/widgets/: card.py
src/: experience.py  pages.py  skills.py  types.py
src/business/: md.py
src/pages/: home.py  projects.py
src/pages_old/: experience.py  home.py  projects.py
tests/business/: test_md.py
tests/libs/cms/: test_md.py
tests/libs/cms/documents/datasource/: test_markdown_file.py
tools/: build.sh  run.sh
