[project]
name = "cv-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.37.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.14",
    "streamlit>=1.53.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 120